Alterações para melhorar a documentação.
