# app/Controllers/Http/AuthController.js
@@ -3,19 +3,7 @@
 const User = use('App/Models/User')
 
 class AuthController {
-  /**
-  * @swagger
-  * /register:
-  *   get:
-  *     tags:
-  *       - Usuários
-  *     summary: Registrar um novo usuário no sistema
-  *     responses:
-  *       200:
-  *         description: Mostra a listagem de ferramentas
-  *         example: []
-  */
-  async register({ request }){
+  async cadastrar({ request }){
     const data = request.only(['username','email','password'])
 
     const user = await User.create(data)
@@ -23,7 +11,7 @@ class AuthController {
     return user
   }
 
-  async authenticate({ request, auth }){
+  async logar({ request, auth }){
     const { email, password } = request.all()
 
     const token = await auth.attempt(email, password)
