# app/Models/User.js
@@ -6,25 +6,6 @@ const Model = use('Model')
 /** @type {import('@adonisjs/framework/src/Hash')} */
 const Hash = use('Hash')
 
-/**
-*  @swagger
-*  definitions:
-*    User:
-*      type: object
-*      properties:
-*        id:
-*          type: uint
-*        username:
-*          type: string
-*        email:
-*          type: string
-*        password:
-*          type: string
-*      required:
-*        - username
-*        - email
-*        - password
-*/
 class User extends Model {
   static boot () {
     super.boot()
