# public/docs/swagger.json
@@ -2,9 +2,19 @@
   "swagger": "2.0",
   "info": {
     "version": "0.0.1",
-    "title": "MY-SUPERB-API"
+    "title": "TOOLS-API"
   },
   "host": "localhost:3000",
+  "tags": [
+    {
+      "name": "auth",
+      "description": "Acesso aos endpoints para usuários"
+    },
+    {
+      "name": "tools",
+      "description": "Acesso a todos os endpoints de ferramentas"
+    }
+  ],
   "schemes": [
     "http",
     "https"
@@ -14,24 +24,51 @@
   ],
   "securityDefinitions": {
     "Bearer": {
-      "description": "For accessing the API a valid JWT token must be passed in all the queries in\nthe 'Authorization' header.\n\n\nA valid JWT token is generated by the API and retourned as answer of a call\nto the route /login giving a valid user & password.\n\n\nThe following syntax must be used in the 'Authorization' header :\n\n    Bearer: xxxxxx.yyyyyyy.zzzzzz\n",
+      "description": "Para acessar a API, um token JWT válido deve ser transmitido em todas as consultas\nem 'Authorization' header.\n\n\nUm token JWT válido é gerado pela API e retornado como resposta de uma chamada\npara a rota /logar colocando um usuário e senha válidos.\n\n\nA seguinte sintaxe deve ser usada no 'Authorization' header :\n\n    Bearer: xxxxxx.yyyyyyy.zzzzzz\n",
       "type": "apiKey",
       "name": "Authorization",
       "in": "header"
     }
   },
   "paths": {
-    "/authenticate": {
+    "/cadastrar": {
       "post": {
         "tags": [
           "auth"
         ],
-        "description": "Allow users to log in, and to receive a Token\n",
+        "description": "Cadastrar um novo usuário no sistema.\n",
         "parameters": [
           {
             "in": "body",
             "name": "body",
-            "description": "The email/password",
+            "description": "Colocar o usuario, email e senha",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Cadastrar"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Cadastrado com Sucesso",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        }
+      }
+    },
+    "/logar": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "description": "Permitir que os usuários efetuem login e recebam um token\n",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Colocar o email e a senha",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Login"
@@ -40,19 +77,19 @@
         ],
         "responses": {
           "200": {
-            "description": "Login Success",
+            "description": "Login com Sucesso",
             "schema": {
               "$ref": "#/definitions/Token"
             }
           },
           "400": {
-            "description": "Whether the user is not found or error while login",
+            "description": "Se o usuário não foi encontrado ou com erro durante o login",
             "schema": {
               "$ref": "#/definitions/Error"
             }
           },
           "403": {
-            "description": "If user is not found (bad credentials) OR if user can not login (a concierge of an unsctive client)",
+            "description": "Se o usuário não for encontrado (credenciais erradas) ou se o usuário não puder fazer o login (cliente não ativo)",
             "schema": {
               "$ref": "#/definitions/Error"
             }
@@ -63,8 +100,8 @@
     "/tools": {
       "get": {
         "tags": [
-          "tools"
-        ],
+            "tools"
+          ],
         "security": [
           {
             "Bearer": []
@@ -82,19 +119,83 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+            "tools"
+          ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "description": "Get a list of all existing users",
+        "responses": {
+          "200": {
+            "description": "Um array de ferramentas",
+            "schema": {
+              "type": "object",
+              "items": {
+                "$ref": "#/definitions/Tool"
+              }
+            }
+          }
+        }
       }
     }
   },
   "definitions": {
+    "Cadastrar": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string",
+          "example": "username"
+        },
+        "email": {
+          "type": "string",
+          "example": "email@mail.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "123456"
+        }
+      }
+    },
     "Login": {
       "type": "object",
       "properties": {
+        "email": {
+          "type": "string",
+          "example": "email@mail.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "123456"
+        }
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
         "email": {
           "type": "string"
         },
         "password": {
           "type": "string"
-        }
+        },
+        "created_at": {
+          "type": "datetime"
+        },
+        "update_at": {
+          "type": "datetime"
+        },
+        "id": {
+          "type": "integer"
+        },
       }
     },
     "Token": {
